# DynaSoRS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  testDynaSoRS.m
app/: CMakeLists.txt  README.md
app/balancing-floating-multiBody/: openExistingSimulation.m  runDemo.m
app/balancing-floating-multiBody/app/iCubGazeboV2_5/: init_model.m  (+1 more)
app/balancing-floating-multiBody/src/: floatingBaseBalancing.m  forwardDynamicsBalancing.m
app/dataAnalyzer/: runDemo.m
app/dataAnalyzer/src/: dataAnalyzer.m
app/freeFalling-singleBody/: openExistingSimulation.m  runDemo.m
app/freeFalling-singleBody/src/: forwardDynamicsSingleBody.m  freeFallingSingleBody.m
app/gravComp-fixed-multiBody/: openExistingSimulation.m  runDemo.m
app/gravComp-fixed-multiBody/src/: forwardDynamicsGravityComp.m  gravityCompensation.m
app/hovering-floating-multiBody-velocity/: openExistingSimulation.m  runDemo.m
app/hovering-floating-multiBody-velocity/src/: flightControlMomentum.m  floatingBaseHovering.m  forwardDynamicsHovering.m  integrateForwardDynamics.m  momentumQPControl.m
app/test-idyntreeWrappers/: runDemo.m
app/test-idyntreeWrappers/src/: wrappersTest.m
wrappers/: CMakeLists.txt  README.md
wrappers/WBC-library-wrappers/: README.md  fromPosQuatToTransfMatr.m  fromTransfMatrixToPosQuat.m  quaternionDerivative.m  rollPitchYawFromRotation.m  roty.m  rotz.m  skew.m  vectorDemux.m
wrappers/idyntree-high-level-wrappers/: README.md  idyn_generalizedGravityForces.m  idyn_getCenterOfMassJacobian.m  idyn_getCenterOfMassPosition.m  idyn_getFloatingBase.m  idyn_getFrameBiasAcc.m  idyn_getFrameFreeFloatingJacobian.m  idyn_getFrameIndex.m  idyn_getFrameVelocityRepresentation.m  idyn_getFreeFloatingMassMatrix.m  idyn_getJointPos.m  idyn_getJointVel.m  idyn_getModelVel.m  idyn_getRelativeTransform.m  idyn_getWorldBaseTransform.m  idyn_initializeVisualizer.m  idyn_loadReducedModel.m  idyn_setFloatingBase.m  idyn_setJointPos.m  idyn_setRobotState.m  idyn_updateVisualizer.m  idyn_visualizerSetup.m
(+188 files in other folders)
